добавление полей начала задачи и дедлайна
обновлены:
- доменная модель
- dto use case'ов
- запросы к бд
- dto мутаций и ответов
- документация для http транспорта
