# internal/transport/http/handlers/dto.go
@@ -10,6 +10,9 @@ type taskMutationDTO struct {
 	Title       string            `json:"title"`
 	Description string            `json:"description"`
 	Status      taskdomain.Status `json:"status"`
+
+	StartAt  *time.Time `json:"start_at,omitempty"`
+	Deadline *time.Time `json:"deadline,omitempty"`
 }
 
 type taskDTO struct {
@@ -19,10 +22,13 @@ type taskDTO struct {
 	Status      taskdomain.Status `json:"status"`
 	CreatedAt   time.Time         `json:"created_at"`
 	UpdatedAt   time.Time         `json:"updated_at"`
+
+	StartAt  *time.Time `json:"start_at,omitempty"`
+	Deadline *time.Time `json:"deadline,omitempty"`
 }
 
 func newTaskDTO(task *taskdomain.Task) taskDTO {
-	return taskDTO{
+	dto := taskDTO{
 		ID:          task.ID,
 		Title:       task.Title,
 		Description: task.Description,
@@ -30,4 +36,11 @@ func newTaskDTO(task *taskdomain.Task) taskDTO {
 		CreatedAt:   task.CreatedAt,
 		UpdatedAt:   task.UpdatedAt,
 	}
+	if task.StartAt != nil {
+		dto.StartAt = task.StartAt
+	}
+	if task.Deadline != nil {
+		dto.Deadline = task.Deadline
+	}
+	return dto
 }
